tests/fixtures/invalid/unclosed-comment.wgsl
// Unclosed block comment
fn test() {
    /* This comment is never closed
    var x: f32 = 1.0;
}
